# mycelos

./: .env.example  .env.test.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: auto-tag.yml  deploy-production.yml  docker.yml  tests.yml
artifacts/workflows/: check-reminders.yaml  create-agent.yaml  email-digest.yaml  email-to-knowledge.yaml  email-urgent-notify.yaml  news-summary.yaml  note-intake.yaml  topic-monitor.yaml  weekly-review.yaml
docs/demo-content/: project-ideas.md
docs/deployment/: custom-image.md  google-setup.md
docs/scenarios/: README.md
docs/security/: two-container-deployment.md
frontend/: package-lock.json  package.json  tailwind.config.ts
screenshots/: screenshots.json
scripts/: build-frontend.sh  cleanup_orphan_connectors.py  debug_telegram_chat.py  debug_telegram_polling.py  install-macos-sqlite.sh  install.ps1  install.sh
tests/: conftest.py  test_admin_routes.py  test_agent_handoff.py  test_agent_lifecycle_snapshots.py  test_agent_models.py  test_agent_registry_v2.py  test_agent_spec.py  test_agent_test_runner.py  test_app_credentials.py  test_audit.py  test_auditor.py  test_background_runner.py  test_background_workflow.py  test_blueprint.py  test_bucket_note.py  test_build_context.py  test_cassette.py  test_chat.py  test_chat_confirmation.py  test_chat_events.py  test_chat_helpers.py  test_chat_orchestrator_integration.py  test_chat_service.py  test_cleanup_orphan_connectors.py  test_cli.py  test_code_generator.py  test_completer.py  test_compose_structure.py  test_config.py  test_config_generations_v2.py  test_config_notifier.py  test_confirmable.py  test_connector_commands.py  test_connector_integration.py  test_connector_list_two_sections.py  test_connector_registry.py  test_connector_setup.py  test_connector_slash.py  test_connector_slash_trimmed.py  test_connector_telegram_flow.py  (+142 more)
(+463 files in other folders)
